--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="img/dead.png"  class="background-img">
-    <audio src="audio/spin.mp3" class="audio"></audio>
+    <img src="img/dead.png"  class="background-img" id="background-first">
+    <img src="img/rick.png"  class="background-img" id="background-second">
+    <img src="img/snap.png"  class="background-img" id="background-third">
+
+    <audio src="audio/spin.mp3" id="audio_first"></audio>
+    <audio src="audio/never.mp3" id="audio_second"></audio>
+    <audio src="audio/rhythm.mp3" id="audio_third"></audio>
     <div class="container">
-        <div class="music-block first">
-            <img src="img/dead.png" alt="dead" class="image">
+        <div class="music-block">
+            <div class="muz-content first">
+                <img src="img/dead.png" alt="dead" class="image">
             <div class="music-title">
                 <p class="artist-name">
                     Dead or Alive
@@ -21,17 +27,44 @@
                     You Spin Me Round
                 </p>
             </div>
+            </div>
+
+            <div class="muz-content second">
+                <img src="img/rick.png" alt="rick" class="image">
+            <div class="music-title">
+                <p class="artist-name">
+                    Rick Astley
+                </p>
+                <p class="song-name">
+                    Never Gonna Give You Up
+                </p>
+            </div>
+            </div>
+
+            <div class="muz-content third">
+                <img src="img/snap.png" alt="snap" class="image">
+            <div class="music-title">
+                <p class="artist-name">
+                    SNAP!
+                </p>
+                <p class="song-name">
+                    Rhythm is A Dancer
+                </p>
+            </div>
+            </div>
             <div class="control-content">
                 <div class="controls">
                     <div class="audio-control">
-                        <img src="ico/rewind.png" class="rewind">
-                        <!-- <img src="ico/play.png" class="play"> -->
-                        <img src="ico/pause.png" class="pause">
-                        <img src="ico/forward.png" class="forward">
+                        <img src="ico/rewind.png" id="rewind">
+                        <img src="ico/play.png" id="play">
+                        <img src="ico/pause.png" id="pause">
+                        <img src="ico/forward.png" id="forward">
                     </div>
                     <input type="range" name="range" id="range-audio" min="0" value="0">
-                    <div class="currentTime"></div>
-                    <div class="durationTime"></div>
+                    <div class="timing">
+                        <div class="currentTime">0:00</div>
+                        <div class="durationTime">3:14</div>
+                    </div>
                 </div>
                 <div class="footer">
                     <a href="https://github.com/jazi29" target="_blank">
@@ -45,27 +78,7 @@
             
             </div>
         </div>
-        <!-- <div class="music-block second">
-            <img src="img/rick.png" alt="dead" class="image">
-        <p class="artist-name">
-            Rick Astley
-        </p>
-        <p class="song-name">
-            Never Gonna Give You Up
-        </p>
-        </div>
-        <div class="music-block third">
-            <img src="img/snap.png" alt="dead" class="image">
-        <p class="artist-name">
-            Snap!
-        </p>
-        <p class="song-name">
-            Rhythm Is a Dancer
-        </p>
-        </div> -->
     </div>
-    <!-- <audio src="audio/never.mp3">never</audio>
-    <audio src="audio/rhythm.mp3">rhythm</audio>
-    <audio src="audio/spin.mp3">spin</audio> -->
 </body>
+<script src="index.js"></script>
 </html>
