fix: update index.html

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -19,7 +19,7 @@
 
         <div class="music-block first">
             <div class="muz-content">
-                <img src="img/dead.png" alt="dead" class="image">
+                <img src="img/spin.png" alt="dead" class="image">
                 <div class="music-title">
                     <p class="artist-name">
                         Dead or Alive
@@ -58,7 +58,7 @@
 
         <div class="music-block second">
             <div class="muz-content">
-                <img src="img/rick.png" alt="rick" class="image">
+                <img src="img/never.png" alt="rick" class="image">
                 <div class="music-title">
                     <p class="artist-name">
                         Rick Astley
@@ -97,7 +97,7 @@
 
         <div class="music-block third">
             <div class="muz-content">
-                <img src="img/snap.png" alt="snap" class="image">
+                <img src="img/rhytmn.png" alt="snap" class="image">
                 <div class="music-title">
                     <p class="artist-name">
                         SNAP!
